--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 worcliver/__pycache__/__init__.cpython-310.pyc
 worcliver/__pycache__/load_data.cpython-310.pyc
+worcliver/__pycache__/load_data.cpython-39.pyc
+worcliver/__pycache__/__init__.cpython-39.pyc
